HelloUltraviolet/Fixtures/RejectedSource/Expressions/CallArgType/Expected.uv
//! Expected diagnostic metadata for the CallArgType rejected-source specimen.

expectedDiagnostic("E-SEM-2533", "rule.16.Call-ArgType-Err")
